objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>New Hire Process</fullName>
        <description>New Hire Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Analysis</fullName>
        </values>
        <values>
            <fullName>In Coding</fullName>
        </values>
        <values>
            <fullName>New</fullName>
        </values>
        <values>
            <fullName>New Hire Detail Required</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Pending Customer Update</fullName>
        </values>
        <values>
            <fullName>Pending User Response</fullName>
        </values>
        <values>
            <fullName>Pending Verification</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Business_days_without_updates__c</fullName>
        <formula>TODAY() - DATEVALUE(LastModifiedDate) - 2*( floor((TODAY() - DATE(2009, 9, 14))/7) - floor((DATEVALUE(LastModifiedDate) - DATE(2009, 9, 14))/7) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business days without updates</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Age__c</fullName>
        <formula>IF(IsClosed, ROUND(ClosedDate - CreatedDate, 0), ROUND((NOW() - CreatedDate), 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Category_SubGroup__c</fullName>
        <label>Group</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Data_Category_group__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>JDE</fullName>
                </value>
                <value>
                    <fullName>Bl Tools</fullName>
                </value>
                <value>
                    <fullName>New Hire</fullName>
                </value>
                <value>
                    <fullName>Termination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Category_group__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Custom Application</fullName>
                </value>
                <value>
                    <fullName>Diver</fullName>
                </value>
                <value>
                    <fullName>DW/SQL</fullName>
                </value>
                <value>
                    <fullName>EDI</fullName>
                </value>
                <value>
                    <fullName>eWinery/NVPOS</fullName>
                </value>
                <value>
                    <fullName>Sharepoint/InfoPath</fullName>
                </value>
                <value>
                    <fullName>Hubble</fullName>
                </value>
                <value>
                    <fullName>Intranet</fullName>
                </value>
                <value>
                    <fullName>JDE</fullName>
                </value>
                <value>
                    <fullName>New Hire/Term Related</fullName>
                </value>
                <value>
                    <fullName>PBCS</fullName>
                </value>
                <value>
                    <fullName>QlikView</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>TradePulse</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Apps</fullName>
                </value>
                <value>
                    <fullName>Network</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Conference</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>Uncorked</fullName>
                </value>
                <value>
                    <fullName>TWI</fullName>
                </value>
                <value>
                    <fullName>Admin Support</fullName>
                </value>
                <value>
                    <fullName>eCommerce website</fullName>
                </value>
                <value>
                    <fullName>Marketing website</fullName>
                </value>
                <value>
                    <fullName>Applications</fullName>
                    <isActive>false</isActive>
                    <label>Applications</label>
                </value>
                <value>
                    <fullName>HelpDesk</fullName>
                    <isActive>false</isActive>
                    <label>HelpDesk</label>
                </value>
                <value>
                    <fullName>Terlatowines.com</fullName>
                    <isActive>false</isActive>
                    <label>Terlatowines.com</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>FP&amp;A</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>PR</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Spirits</fullName>
                </value>
                <value>
                    <fullName>Tax</fullName>
                </value>
                <value>
                    <fullName>Winery Accounting</fullName>
                </value>
                <value>
                    <fullName>Winery Marketing</fullName>
                </value>
                <value>
                    <fullName>Winery Operations</fullName>
                </value>
                <value>
                    <fullName>Winery Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Impact__c</fullName>
        <label>Impact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No user impact</fullName>
                    <default>true</default>
                    <label>No user impact</label>
                </value>
                <value>
                    <fullName>1 person impacted</fullName>
                </value>
                <value>
                    <fullName>1 person cannot work</fullName>
                </value>
                <value>
                    <fullName>Multiple users impacted</fullName>
                </value>
                <value>
                    <fullName>Multiple users cannot work</fullName>
                </value>
                <value>
                    <fullName>All users inpacted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Comment__c</fullName>
        <label>Last Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Root_Cause__c</fullName>
        <label>Root Cause</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Send_custom_email_notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Custom Notification Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Age__c</fullName>
        <description>Concatenate Status and Case Age</description>
        <formula>TEXT(Status)&amp; &quot; (&quot; &amp; TEXT(Case_Age__c) &amp; &quot;)&quot;</formula>
        <label>Status Age</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Sub-Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Data_Category_group__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Extract</fullName>
                </value>
                <value>
                    <fullName>Goals</fullName>
                </value>
                <value>
                    <fullName>Markers</fullName>
                </value>
                <value>
                    <fullName>Models</fullName>
                </value>
                <value>
                    <fullName>RAD</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>TrueCommerce</fullName>
                </value>
                <value>
                    <fullName>New Item Push</fullName>
                </value>
                <value>
                    <fullName>MerchItemRequest</fullName>
                </value>
                <value>
                    <fullName>WebServices</fullName>
                </value>
                <value>
                    <fullName>Product Request Form</fullName>
                </value>
                <value>
                    <fullName>Sample Request Form</fullName>
                </value>
                <value>
                    <fullName>CNC</fullName>
                </value>
                <value>
                    <fullName>Data</fullName>
                </value>
                <value>
                    <fullName>Functional Training</fullName>
                </value>
                <value>
                    <fullName>Interactive App</fullName>
                </value>
                <value>
                    <fullName>Month End</fullName>
                </value>
                <value>
                    <fullName>Process</fullName>
                </value>
                <value>
                    <fullName>Project</fullName>
                </value>
                <value>
                    <fullName>Reports (UBE)</fullName>
                </value>
                <value>
                    <fullName>Module - AR</fullName>
                </value>
                <value>
                    <fullName>Module - Financial Reporting</fullName>
                </value>
                <value>
                    <fullName>Module - Operations</fullName>
                </value>
                <value>
                    <fullName>Module - Regional P&amp;L</fullName>
                </value>
                <value>
                    <fullName>Module - Sales Tracker</fullName>
                </value>
                <value>
                    <fullName>Module - Samples</fullName>
                </value>
                <value>
                    <fullName>Module - Shipments</fullName>
                </value>
                <value>
                    <fullName>Module - Uncorked</fullName>
                </value>
                <value>
                    <fullName>Module - Winery Sales Tracker</fullName>
                </value>
                <value>
                    <fullName>User Setup and Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Sub_Category__c</fullName>
        <label>Sub Sub-Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Sub_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Winery</fullName>
                </value>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>IPPhone</fullName>
                </value>
                <value>
                    <fullName>Config</fullName>
                </value>
                <value>
                    <fullName>Outlook</fullName>
                </value>
                <value>
                    <fullName>Excel</fullName>
                </value>
                <value>
                    <fullName>Word</fullName>
                </value>
                <value>
                    <fullName>QuickView</fullName>
                </value>
                <value>
                    <fullName>JDEdwards</fullName>
                </value>
                <value>
                    <fullName>Vistaar</fullName>
                </value>
                <value>
                    <fullName>VPN</fullName>
                </value>
                <value>
                    <fullName>Backups</fullName>
                </value>
                <value>
                    <fullName>Disk Management</fullName>
                </value>
                <value>
                    <fullName>File Restore</fullName>
                </value>
                <value>
                    <fullName>User Admin</fullName>
                </value>
                <value>
                    <fullName>Access Rights</fullName>
                </value>
                <value>
                    <fullName>User Password</fullName>
                </value>
                <value>
                    <fullName>Bannockburn</fullName>
                </value>
                <value>
                    <fullName>Napa</fullName>
                </value>
                <value>
                    <fullName>Hubble</fullName>
                </value>
                <value>
                    <fullName>iPad</fullName>
                </value>
                <value>
                    <fullName>Surface Pro</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Network Printer</fullName>
                </value>
                <value>
                    <fullName>Tours &amp; Tastings App</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Symptom__c</fullName>
        <label>User Symptom</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Apps / Diver</fullName>
                </value>
                <value>
                    <fullName>Apps / JDE</fullName>
                </value>
                <value>
                    <fullName>Apps / PBCS</fullName>
                </value>
                <value>
                    <fullName>Apps / Qlikview</fullName>
                </value>
                <value>
                    <fullName>Apps / Salesforce</fullName>
                </value>
                <value>
                    <fullName>Apps / TradePulse</fullName>
                </value>
                <value>
                    <fullName>Computer / Laptop</fullName>
                </value>
                <value>
                    <fullName>Conference Assistance</fullName>
                </value>
                <value>
                    <fullName>Connectivity / Internet / VPN</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>MS Office</fullName>
                </value>
                <value>
                    <fullName>Password / Access</fullName>
                </value>
                <value>
                    <fullName>Phone / Mobile</fullName>
                </value>
                <value>
                    <fullName>Printer</fullName>
                </value>
                <value>
                    <fullName>Virus / Spam / Malware</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>Root_Cause_and_Resolution_checking</fullName>
        <active>true</active>
        <description>Root_Cause_and_Resolution_checking before case close</description>
        <errorConditionFormula>and (OR (ISBLANK(Resolution__c),ISBLANK(Root_Cause__c)),CONTAINS(TEXT(Status), &apos;Closed&apos;))</errorConditionFormula>
        <errorMessage>Please enter Root Cause and Resolution before closing the case.</errorMessage>
    </validationRules>
</CustomObject>